--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -5,6 +5,26 @@ html, body {
   overscroll-behavior: none;
 }
 
+/* Curseur personnalisé sur tout le site, y compris états pointer */
+* {
+  cursor: url('/cursor.svg') 0 0, auto;
+}
+
+button,
+a,
+[role="button"],
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+input[type="checkbox"],
+input[type="radio"],
+select,
+option,
+textarea,
+label {
+  cursor: url('/cursor.svg') 0 0, auto;
+}
+
 .tp-dfwv {
   z-index: 10000;
 }
