--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -9,24 +9,30 @@ html, body {
   user-select: none;
 }
 
-/* Curseur personnalisé sur tout le site, y compris états pointer */
-* {
-  /* cursor: url('/cursor.svg') 0 0, auto; */
+/* Curseur personnalisé sur tout le site (petit) */
+html, body {
+  cursor: url('/cursor.svg') 0 0, auto;
 }
 
-button,
-a,
-[role="button"],
-input[type="button"],
-input[type="submit"],
-input[type="reset"],
-input[type="checkbox"],
-input[type="radio"],
-select,
-option,
-textarea,
-label {
-  /* cursor: url('/cursor.svg') 0 0, auto; */
+* {
+  cursor: url('/cursor.svg') 0 0, auto;
+}
+
+/* Curseur main pour éléments interactifs */
+/* Use hand cursor on hover for interactive elements (higher specificity and important to override global cursor) */
+button:hover,
+a:hover,
+[role="button"]:hover,
+input[type="button"]:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="checkbox"]:hover,
+input[type="radio"]:hover,
+select:hover,
+option:hover,
+textarea:hover,
+label:hover {
+  cursor: url('/hand.svg') 8 4, pointer !important;
 }
 
 .tp-dfwv {
